Added GetTypedArrayByteOffset to FTL https://bugs.webkit.org/show_bug.cgi?id=127589

Patch by Matthew Mirman <mmirman@apple.com> on 2014-02-03
Reviewed by Filip Pizlo.

* ftl/FTLAbstractHeapRepository.h:
* ftl/FTLCapabilities.cpp:
(JSC::FTL::canCompile):
* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::compileNode):
(JSC::FTL::LowerDFGToLLVM::compileGetTypedArrayByteOffset):
* tests/stress/ftl-gettypedarrayoffset-simple.js: Added.
(foo):
* tests/stress/ftl-gettypedarrayoffset-wasteful.js: Added.
(foo):

Canonical link: https://commits.webkit.org/146135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163324 268f45cc-cd09-0410-ab3c-d52691b4dbfc